--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,15 @@
 
     <groupId>org.example</groupId>
     <artifactId>programmingPrac</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>bin/demos/demos</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
-    
+
 </project>
